Closed Bug 34464 Opened 25 years ago Closed 25 years ago

Crash clicking on menu bar after closing window

Categories

(Core :: XUL, defect, P1)

PowerPC
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: saari)

References

Details

(Keywords: crash, Whiteboard: [PDT+])

Attachments

(1 file)

I crash when clicking on the menu bar after closing a window (not necessarily the last window). To reproduce: 1. Run the browser, note first browser window pops up. 2. Close said browser window with the Close box. You hit an assertion in RDF (may be unrelated) ###!!! ASSERTION: variable already bound: '! HasBindingFor(aBinding.mVariable)', file nsRule 08C46F80 PPC 1F348630 main+00240 08C46EE0 PPC 1F346C14 main1(int, char**, nsISplashScreen*)+00810 08C46DE0 PPC 1E352E38 nsAppShellService::Run()+000E0 08C46D90 PPC 1C2B3CC8 nsAppShell::Run()+00040 08C46D50 PPC 1C2B4578 nsMacMessagePump::DoMessagePump()+00044 08C46D00 PPC 1C2B485C nsMacMessagePump::DispatchEvent(int, EventRecord*)+ 00090 08C46CB0 PPC 1C2B4C30 nsMacMessagePump::DoMouseDown(EventRecord&)+000BC 08C46B80 PPC FFD1BD8C MenuSelect+0001C 08C46A79 PPC 0051353C EmToNatEndMoveParams+00014 08C46A00 PPC 00C335E8 08C46900 68K 00B45E5C MENUSELECTPATCH+00012 08C468EC 68K 00B45F76 MenuSelectPatchMain+00046 08C468B5 PPC 0051353C EmToNatEndMoveParams+00014 08C46840 PPC 2013CD10 GetSubmenuParentChoosable+00160 08C467F0 PPC 2013D4E8 GetSubmenuParentChoosable+00938 08C46750 PPC 2013D1BC GetSubmenuParentChoosable+0060C 08C466B0 PPC 2013D8BC GetSubmenuParentChoosable+00D0C 08C46670 PPC 2013DE00 GetSubmenuParentChoosable+01250 08C46620 PPC 20136564 CallMenuBar+000D8 08C465D0 PPC 20141A90 StandardMBDF+001CC 08C46500 PPC 20144570 StandardMBDF+02CAC 08C464B0 PPC FFD1BB5C CalcMenuSize+00018 08C46470 PPC 00C339E0 08C46343 PPC 0051353C EmToNatEndMoveParams+00014 08C462C0 PPC 1C2CC470 nsDynamicMDEFMain+00200 08C46200 PPC 1C2CC6F8 nsDynamicSizeTheMenu(MenuInfo**)+00014 08C461C0 PPC 1C2CC8F4 nsDoMagic(MenuInfo**)+000D8 08C46170 PPC 1C2CCAB8 nsBuildMenu(MenuInfo**, int)+0017C 08C46080 PPC 1C299160 nsMenu::MenuSelected(const nsMenuEvent&)+000D0 08C45FF0 PPC 1C2994E8 nsMenu::MenuConstruct(const nsMenuEvent&, nsIWidget* , void*, voi d*)+000E4 08C45E70 PPC 1C1F8B60 nsXULElement::SetAttribute(const nsString&, const nsString&)+001 64 08C45E00 PPC 1C201E0C nsXULElement::SetAttribute(int, nsIAtom*, const nsString&, int)+ 00EA8 08C45BF0 PPC 1C171A50 nsXULDocument::AttributeChanged(nsIContent*, int, nsIAtom*, int) +0017C 08C459B0 PPC 1C1804D4 nsXULDocument::OpenWidgetItem(nsIContent*)+00354 08C45830 PPC 1C240BFC RDFGenericBuilderImpl::OpenContainer(nsIContent*)+ 001B4 08C45770 PPC 1C249F3C RDFGenericBuilderImpl::CreateContainerContents(nsIContent*, nsIR DFResource*, int, nsIContent**, int*)+002FC 08C45610 PPC 1C2322E4 BindingSet::Add(const Binding&)+00044 08C455B0 PPC 1CF81C20 nsDebug::PreCondition(const char*, const char*, const char*, int )+0002C 08C45570 PPC 1CF8194C nsDebug::Assertion(const char*, const char*, const char*, int)+0 005C 3. After the window has closed, click on the menu bar. You will crash thusly: PowerPC illegal instruction at 00002800 Calling chain using A6/R1 links Back chain ISA Caller 00000000 PPC 1F35DC34 08C46F80 PPC 1F348630 main+00240 08C46EE0 PPC 1F346C14 main1(int, char**, nsISplashScreen*)+00810 08C46DE0 PPC 1E352E38 nsAppShellService::Run()+000E0 08C46D90 PPC 1C2B3CC8 nsAppShell::Run()+00040 08C46D50 PPC 1C2B4578 nsMacMessagePump::DoMessagePump()+00044 08C46D00 PPC 1C2B485C nsMacMessagePump::DispatchEvent(int, EventRecord*)+ 00090 08C46CB0 PPC 1C2B4C30 nsMacMessagePump::DoMouseDown(EventRecord&)+000BC 08C46B80 PPC FFD1BD8C MenuSelect+0001C 08C46A79 PPC 0051353C EmToNatEndMoveParams+00014 08C46A00 PPC 00C335E8 08C46900 68K 00B45E5C MENUSELECTPATCH+00012 08C468EC 68K 00B45F76 MenuSelectPatchMain+00046 08C468B5 PPC 0051353C EmToNatEndMoveParams+00014 08C46840 PPC 2013CD10 GetSubmenuParentChoosable+00160 08C467F0 PPC 2013D4E8 GetSubmenuParentChoosable+00938 08C46750 PPC 2013D1BC GetSubmenuParentChoosable+0060C 08C466B0 PPC 2013D8BC GetSubmenuParentChoosable+00D0C 08C46670 PPC 2013DE00 GetSubmenuParentChoosable+01250 08C46620 PPC 20136564 CallMenuBar+000D8 08C465D0 PPC 20141A90 StandardMBDF+001CC 08C46500 PPC 20144570 StandardMBDF+02CAC 08C464B0 PPC FFD1BB5C CalcMenuSize+00018 08C46470 PPC 00C339E0 08C46343 PPC 0051353C EmToNatEndMoveParams+00014 08C462C0 PPC 1C2CC308 nsDynamicMDEFMain+00098 08C46200 PPC 1C2CC5BC nsCheckDestroy(MenuInfo**, short*)+000A0 08C461B0 PPC 1C2CD008 nsPreviousMenuStackUnwind(nsIMenu*, MenuInfo**)+ 000A8 08C46100 PPC 1C29F7F8 NSGetFactory+0F538 PowerPC illegal instruction at 00002800 Closing log
Keywords: smoketest
Keywords: crash
Priority: P3 → P2
The assertion is related to the changes I checked in yesterday. I'm spinng a Mac build now and will try to see why that's firing.
Blocker.
Severity: normal → blocker
This didn't come up during the smoketests, so while this may be a blocker, I'm not sure it's a smoketest blocker that we need to keep the tree closed for. I'll check with QA.
Target Milestone: --- → M15
It's a development blocker, IMO.
Open the tree, so I can check in other mac menu changes so I can pull and help waterson with this.
I don't think we should hold the whole tree closed for this... top men are on it...
Keywords: smoketest
after talking to QA they saw this with AIM but did not consider this a blocker. removing the smoketest keyword.
Mass-moving most M15 bugs to M16
Target Milestone: M15 → M16
I protest! This is a blocker for me. This must be fixed in M15.
Target Milestone: M16 → M15
Yes, this should really be fixed for M15. Affects IM as well.
marking dogfood, PDT+ because the AIM PDT+ bug is dependent on this, per PDT Team
Keywords: dogfood
Whiteboard: [PDT+]
Fixed, thanks to Waterson
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 34734 has been marked as a duplicate of this bug. ***
FYI...I'm still seeing this on this morning's commercial mac build 2000-04-07-08. Reopening
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Me too. The stack is exactly the one I pasted above.
p1
Priority: P2 → P1
Okay, I don't see this anymore... I could do it by clicking on the tasks menu before. It looks Okay to me now. I guess I'll try fresh tree?
Fix in hand. Now that we're not leaking the menu bars on window close, the late destruction of the last poped up menu was trying to destroy a previously deleted menu. My solution is to have the dynamic MDEF keep strong references to the menus it is keeping track of in the gPreviousMenuStack in the Mac dynamic MDEF. You guys neglected to mention that it only happens when you open a window with a different menu bar. Opening two of the same window does not show this.
Status: REOPENED → ASSIGNED
Whiteboard: [PDT+] → [PDT+] Fix in hand
fixed
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
verified fixed (mac 9.0 2000041110)
Status: RESOLVED → VERIFIED
reopening I have managed to crash twice today (with Mac build from today) when clicking on the menubar.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Whiteboard: [PDT+] Fix in hand → [PDT+]
Attached file macsbug log
brade, the build from 4-12? As in, not M15?
brade, what are you doing when it crashes? Have you just closed a window, which menu did you click on, etc.
Based on that stack I've added another saftey check to the menu code which may or may not stop the crash... do you want the patch brade?
send me the patch... for the record, I'm using the trunk (not m15 branch). I think it was the File menu one time when I quit. Another time I think it was the Bookmarks menu (or Go menu?) I couldn't tell since it crashed before redrawing the menubar.
I'm moving this to M16 unless someone can repro on the M15 branch.
Target Milestone: M15 → M16
Just checked in the patch that seems to work for brade. I still cannot repro so marking fixed.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
I cannot reproduce this crash with either the M15 or M16 verification builds for today [2000041706 && 2000041713 respectively]. However, I could not see this crash after the first patch was applied. If sfraser or brade would verify this, thanks. Otherwise I will check again and verify with tomorrow's am builds.
verified fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: