Checking in fix for Waterson for M15 bug #34464, Mac menus crashing after you close a window. Waterson did the work, I just reviewed. r=saari, a=leaf